# chroma-sync

./: .env.example  .gitignore  CLAUDE.md  README.md  compose.yaml  package-lock.json  package.json
.github/workflows/: build.yml  deploy.yml
.spec-workflow/specs/: design.md  product.md  requirements.md  structure.md  tech.md
backend/: Dockerfile  Dockerfile.lambda  chroma_sync.spec  lambda_handler.py  pyproject.toml  requirements-lambda.txt  run_server.py  worker_handler.py
backend/app/: config.py  main.py
backend/app/api/: convert.py  health.py
backend/app/converter/: color_diff.py  color_profile.py  engine.py  llm_advisor.py
backend/app/models/: job.py  result.py
backend/app/services/: file_manager.py  job_queue.py  job_repository.py  storage.py
backend/tests/: conftest.py
backend/tests/test_api/: test_convert.py
backend/tests/test_converter/: test_color_diff.py
build-assets/: entitlements.mac.plist
electron/: main.js  preload.js
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  index.css  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/ConversionOptions/: ConversionOptions.module.css  index.tsx
frontend/src/components/FileUpload/: index.tsx  (+1 more)
frontend/src/hooks/: useConversion.ts  useMultiConversion.ts  useWebSocket.ts
frontend/src/types/: conversion.ts
infra/: api_gateway.tf  bootstrap.sh  cloudfront.tf  dynamodb.tf  ecr.tf  iam.tf  lambda.tf  main.tf  outputs.tf  route53.tf  s3.tf  sqs.tf  variables.tf
scripts/: build-mac.sh  build-win.ps1
(+4 files in other folders)
